added theoretical perspectives

--- a/variationalhmm.bib
+++ b/variationalhmm.bib
@@ -12,3 +12,10 @@
   volume={34},
   year={2021}
 }
+
+@inproceedings{tang21a,
+  author    = {Tang, Rong and Yang, Yun},
+  title     = {On Empirical Bayes Variational Autoencoder: An Excess Risk Bound},
+  booktitle = {Proceedings of Machine Learning Research vol 134, 34th Annual Conference on Learning Theory COLT 2021},
+  year      = {2021}
+}
